         lilyminium, daveminh, jbarnoud, yuxuanzhuang, VOD555, ianmkenney,
         calcraven，xiki-tempula, mieczyslaw, manuel.nuno.melo, PicoCentauri,
         hanatok, rmeli, aditya-kamath, tirkarthi, LeonardoBarneschi, hejamu,
         biogen98, orioncohen, z3y50n, hp115, ojeda-e, thadanipaarth, HenryKobin,
         1ut, sulays, ahy3nz

  * 2.0.0

Fixes
  * NCDFReader now defaults to a dt value of 1.0 ps when it cannot estimate
    it from the first two frames of the file (Issue #3166)
  * Get chi1_selection to match canonical gamma atoms (Issue #2044)
  * ITPParser now accepts relative paths (Issue #3037, PR #3108)
  * Fixed issue with unassigned 'GAP' variable in fasta2algin function when
    resids are provided in input (Issue #3124)
  * Improve diffusionmap coverage (Issue #3208)
  * Removed deprecated parameters `n_jobs` and `precompute_distances` of
    sklearn.cluster.KMeans (Issue #2986)
  * Helix_analysis coverage raised to 100% and `from __future__ import`
    removed (Issue #3209)
  * Fixed 'sphzone', 'sphlayer', 'cyzone', and 'cylayer' to return empty if the
   zone/layer is empty, consistent with 'around' (Issue #2915)
  * A Universe created from an ROMol with no atoms returns now a Universe
    with 0 atoms (Issue #3142)
  * PDBParser will check for the presence of the chainID attribute of an
    atom group and use these values instead of just using the end of segid.
    If no chainID attribute is present, then a default value will be
    provided. If the chainID for an atom is invalid (longer than one character,
    not alpha-numeric, blank) it will be replaced with a default. (Issue #3144)
  * ValueError raised when empty atomgroup is given to DensityAnalysis
    without a user defined grid. UserWarning displayed when user defined
    grid is provided. (Issue #3055)
  * Fixed import of several `__all__` lists (PR #3013)
  * atommethods (_get_prev/next_residues_by_resid) returns empty residue group
    when given empty residue group (Issue #3089)